@@ -10,8 +10,8 @@
 
 AC_INIT(autogen.sh)
 
-VERSION="0.5.13"
-LT_VERSION="0:30:0"
+VERSION="0.6.0"
+LT_VERSION="0:31:0"
 UCOMMON_REQUIRES="2.0.0"
 
 AC_CONFIG_AUX_DIR(autoconf)
