@@ -91,6 +91,27 @@
   <mapped>200</mapped>
   <realm>GNU Telephony</realm>
 </registry>
+
+<!-- templates may be used to set default values for automatically
+     generated user accounts, such as default forwarding or password if
+     not set.
+<templates>
+ <user>
+  <secret>123</secret>
+  <forwarding>
+   <busy>voicemail</busy>
+   <na>voicemail</na>
+  </forwarding>
+ </user>
+ <admin>
+  <forwarding>
+   <busy>operator</busy>
+   <na>operator</na>
+  </forwarding>
+ </admin>
+</templates>
+-->
+
 <!-- Routing rules can do all sorts of transforms for dialed numbers.  The
      routing table can also be used to statically redirect ranges of
      extension numbers to alternate servers.  For example, we redirect 1xx
