@@ -4,6 +4,7 @@ From version 0.5.13 to 0.6.0
 - digest hash database usable as an authentication source.
 - new sippasswd utility to set user's digest secret.
 - can convert login accounts to sipwitch accounts.
+- templates for creating generated accounts.
 
 From version 0.5.12 to 0.5.13
 - introduction of /etc/siprealm to set hash type and realm.
